# taas-server-py

./: .dockerignore  .env.local.example  .env_docker  .gitignore  CLAUDE.MD  Dockerfile  Dockerfile.dev  Dockerfile.fastapi.prod  Dockerfile.litestar.prod  Dockerfile.prod  TODO.md  docker-compose-fastapi-prod.yml  docker-compose-litestar-prod.yml  docker-compose-prod.yml  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  ruff.toml  run-uv-resync.sh  settings.json  start_ews_api.sh  start_ews_api_fastapi.sh  start_ews_api_litestar.sh  uv.md
apps/ews_api/: CLAUDE.md  main.py  pyproject.toml  start-dev.sh  start.sh
apps/ews_api/src/ews_api/: README.md  __main__.py  app.py  bootstrap.py  main.py  main_litestar.py  performance_fix.md  setup_env.py
apps/ews_api/tests/: test_socketio_task_notifications.py
apps/ews_api/tests/performance_test/k6/: create-user-test.js  create-user.sh  list-user-fast.sh  list-user.sh  run_monitor_postgres_connections.sh  run_performance_test.sh  stress-test-create-user.js  stress-test-list-users.js
apps/ews_api/tests/pgdog/: REAME.md
apps/ews_api_litestar/: CLAUDE.md  pyproject.toml  start-dev.sh
apps/ews_api_litestar/src/ews_api_litestar/: README.md  __main__.py  app.py  main.py  setup_env.py
apps/ews_api_litestar/tests/: test_socketio_task_notifications.py
apps/ews_worker/: README.md  pyproject.toml
apps/ews_worker/src/ews_worker/: __init__.py
libs/a12n/: README.md  pyproject.toml
libs/a12n/docs/references/: rauth_features.md
libs/a12n/docs/specs/: a12n_features.md
libs/a12n/src/a12n/: __init__.py  config.py  endpoints.py  jwks.py  repositories.py  server.py
libs/a12n/src/a12n/auth_methods/: __init__.py  magic_link.py  passkey.py  password.py
libs/a12n/src/a12n/federation/: __init__.py  registry.py
libs/a12n/src/a12n/grants/: __init__.py  auth_code_pkce.py  client_credentials.py  refresh_token.py
libs/a12n/src/a12n/models/: __init__.py  entities.py
libs/a12n/src/a12n/tokens/: __init__.py  jwt_access.py
libs/a12n/src/a12n/tools/: gen_jwks.py
libs/business_core/: pyproject.toml
libs/db/: db-migrations.md  pyproject.toml
libs/db/src/db/: __init__.py
libs/db/src/db/migrations/: README.md  __main__.py  alembic.ini  env.py
libs/db/src/db/models/: __init__.py  _email_verification_token.py  _oauth_account.py  _password_reset_token.py  _refresh_token.py  _role.py  _tag.py  _team_invitation.py  _user.py  _user_role.py  base.py  types.py
libs/ews/: CLAUDE.md  pyproject.toml
libs/ews/src/ews/: __init__.py
libs/http_fastapi/: CLAUDE.md  pyproject.toml
libs/http_fastapi/src/http_fastapi/: __init__.py  base_fastapi_app.py  create_app.py  fastapi_app.py  setup_fastapi_app.py  uvicorn.py
libs/http_fastapi/src/http_fastapi/adapters/: __init__.py  _controller.py  _websocket.py  _websocket_session_socketio.py  _websocket_socketio.py
libs/http_fastapi/src/http_fastapi/fastapi_msgspec/: README.md  openapi.py  routing.py
libs/http_fastapi/src/http_fastapi/middewares/: cache_key_builer.py  fastapi_cache.py  redis_backend.py  request_context.py  slowapi_ratelimit.py
libs/http_litestar/: CLAUDE.md  pyproject.toml
libs/http_litestar/src/http_litestar/: __init__.py  base_litestar_app.py  openapi.py  uvicorn.py
libs/http_litestar/src/http_litestar/adapters/: __init__.py  _controller.py  _dependencies.py  _websocket.py  _websocket_socketio.py
libs/http_litestar/src/http_litestar/litestar_msgspec/: __init__.py  openapi.py
libs/http_litestar/src/http_litestar/middewares/: __init__.py  request_context.py  slowapi_ratelimit.py
libs/iam/: pyproject.toml
libs/iam/src/iam/: __init__.py  constants.py
libs/iam/src/iam/accounts/: __init__.py
libs/iam/src/iam/admin/: users.py
libs/iam/src/iam/libs/: exceptions.py  validation.py
libs/iam/tests/manuals/: user.json
libs/platform_core/: pyproject.toml
libs/platform_core/src/platform_core/: __init__.py  __metadata__.py  app.py  concurrency.py  constants.py  dataclass.py  params copy.py
libs/platform_core/src/platform_core/api/: schema.py
libs/platform_core/src/platform_core/cli/: __init__.py  _show_app_info.py  _utils.py
libs/platform_core/src/platform_core/concurrency/: __init__.py  concurrency.py
libs/platform_core/src/platform_core/config/: __init__.py  allowed_hosts.py  app.py  cache.py  compression.py  cors.py  csrf.py  lock.py  log_config.py  openapi.py  ratelimit.py  redis_config.py  settings.py  wss.py
libs/platform_core/src/platform_core/datastructures/: __init__.py  multi_dicts.py  response_header.py  sse.py  state.py  upload_file.py  url.py
libs/platform_core/src/platform_core/db/: advanced_session_manager.py  db_config.py  deps.py  engine_factory.py  types.py
libs/platform_core/src/platform_core/email/: __init__.py  config.py  exceptions.py  message.py  service.py
libs/platform_core/src/platform_core/events/: emitter.py  listener.py
libs/platform_core/src/platform_core/exceptions/: __init__.py  base_exceptions.py  http_exceptions.py  report_error.py
libs/platform_core/src/platform_core/facade/: README.md  base.py  cache.py
libs/platform_core/src/platform_core/handlers/: base.py
libs/platform_core/src/platform_core/http/: CLAUDE.md  SOCKETIO_MANUAL_TEST.md  WEBSOCKETS.md  __init__.py  _socketio.py  _websocket.py  (+12 more)
libs/platform_core/tests/unit_local/: README.md  conftest.py  test_async_cache_ttl_ignore_all_arg.py  test_async_cache_ttl_ignore_first_arg.py  test_bulkhead.py  test_circuit_breaker.py  test_db_session_decorators.py  test_dead_letter_queue.py  test_fallback.py  test_idempotency.py  test_outbox.py  test_retry.py  test_saga.py  test_timeout.py
libs/platform_db_sa/: pyproject.toml
libs/platform_db_sa/src/platform_db_sa/: __init__.py  constants.py  engine.py
libs/rest_fastapi/: pyproject.toml
libs/rest_fastapi/src/rest_fastapi/: base_fastapi_app.py
libs/slowapi_advanced/: CLAUDE.md  pyproject.toml
libs/slowapi_advanced/src/slowapi_advanced/: __init__.py  extension.py  middleware.py
libs/slowapi_advanced/tests/: __init__.py  test_base.py  test_fastapi_extension.py  test_starlette_extension.py
(+225 files in other folders)
