[project]
name = "taas-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [

]

[tool.uv.workspace]
members = [
    "libs/platform_core",
    "libs/http_fastapi",
    "libs/db",
    "libs/ews",
    "apps/ews_api",
    "apps/ews_worker",
    "libs/http_litestar",
]

# exclude = ["services/nodejs-worker"]

[tool.uv.sources]
platform_core = { workspace = true }
db = { workspace = true }
ews = { workspace = true }
http_fastapi = { workspace = true }
http_litestar = { workspace = true }
ews_api = { workspace = true }
ews_worker = { workspace = true }


[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-asyncio>=1.3.0",
    "pyright>=1.1.0",
    "ruff>=0.15.14",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
    "httpx>=0.24.0",  # For API testing
    "testcontainers[postgres]>=4.0.0",
    "pytest-xdist>=3.5.0",
    "filelock>=3.12.0",
    "respx>=0.23.1",
]
