[project]
name = "taas-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    'msgspec==0.21.1',
    'pydantic==2.13.4',
]

[tool.uv.workspace]
members = [
    "libs/platform_core",
    "libs/http_fastapi",
    "libs/db",
    "libs/ews",
    "apps/ews_api",
    "apps/ews_api_litestar",
    "apps/ews_worker",
    "libs/http_litestar",
    "libs/store_redis",
    "libs/store_memcached",
    "libs/slowapi_advanced",
    "libs/iam",
]

# exclude = ["services/nodejs-worker"]

[tool.uv.sources]
platform_core = { workspace = true }
db = { workspace = true }
ews = { workspace = true }
http_fastapi = { workspace = true }
http_litestar = { workspace = true }
ews_api = { workspace = true }
ews_api_litestar = { workspace = true }
ews_worker = { workspace = true }
store_redis = { workspace = true }
store_memcached = { workspace = true }
slowapi_advanced = { workspace = true }
iam = { workspace = true }


[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-asyncio>=1.3.0",
    "pyright>=1.1.0",
    "ruff>=0.15.14",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
    "httpx>=0.24.0",  # For API testing
    "aiohttp>=3.9.0",  # For python-socketio AsyncClient in tests
    "testcontainers[postgres]>=4.0.0",
    "pytest-xdist>=3.5.0",
    "filelock>=3.12.0",
    "respx>=0.23.1",
]
