[project]
name = "ews_api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  'platform_core',
  'ews',
  'http_fastapi',
  'db',
  'fastapi==0.136.1',
  'uvicorn==0.34.0',
]

[project.scripts]
ews_api = "ews_api:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"