[project]
name = "ews_api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  'platform_core',
  'ews',
  'http_fastapi',
  'http_litestar',
  'db',
  'fastapi==0.136.1',
  'litestar==2.22.0',
  'uvicorn==0.34.0',
  'redis==7.4.0',
]

[project.scripts]
ews_api = "ews_api.main:main"
ews_api_litestar = "ews_api.main_litestar:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"