[project]
name = "a12n"
version = "0.1.0"
description = "Lightweight OAuth 2.1 / OIDC provider built on Authlib"
readme = "README.md"
authors = [
    { name = "Thanh LE", email = "thanh@floin.com" }
]
requires-python = ">=3.14"
dependencies = [
    # Workspace packages
    "core_types",

    # OAuth 2.1 / OIDC server + JOSE + upstream IdP client
    "authlib>=1.6.0",
    "httpx>=0.27",
    # Web layer
    "fastapi>=0.110.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1",
    "pydantic>=2.0.0",
    # Authentication methods
    "argon2-cffi>=23.1.0",
    "webauthn>=2.5.0",
    "zxcvbn>=4.5.0",
    # Rate limiting
    "slowapi>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a12n"]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov==7.0.0",
    "httpx>=0.27",
]

[tool.uv]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
asyncio_mode = "auto"
