[project]
name = "db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thanh LE", email = "thanhlq@msn.com" }
]
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest==9.0.2",
]


[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
