[project]
name = "db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thanh LE", email = "thanhlq@msn.com" }
]
requires-python = ">=3.14"
dependencies = [
    "advanced-alchemy[cryptography]==1.11.0",
    "alembic>=1.18.4",
    'platform_core',
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
]


[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
