[project]
name = "ews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thanh LE", email = "thanh@msn.com" }
]
requires-python = ">=3.14"
dependencies = [
    "platform_core",
    "msgspec==0.21.1",
    "pydantic==2.13.4",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
