[project]
name = "http_fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thanh LE", email = "thanhlq@msn.com" }
]
requires-python = ">=3.14"
dependencies = [
    "platform_core",
    'slowapi_advanced',

    # API Framework
    "fastapi==0.136.1",
    "uvicorn==0.34.0",

    # rate limiting libs / decorators
    "slowapi_advanced==0.1.9",
    "fastapi-cache2==0.2.2",

    # 🔌 Real-time Communication
    "python-socketio==5.16.2",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
