[project]
name = "http-litestar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thanh LE", email = "thanh@floin.com" }
]
requires-python = ">=3.14"
dependencies = [
    'litestar==2.22.0',
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
