[project]
name = "http-litestar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thanh LE", email = "thanhlq@msn.com" }
]
requires-python = ">=3.14"
dependencies = [
    'litestar==2.22.0',
    'uvicorn==0.34.0',
    'platform_core',

    # ⏱️ Rate limiting (per-route ``ratelimit=`` enforcement)
    'limits==5.8.0',

    # 🔌 Real-time Communication
    'python-socketio==5.16.2',
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
