[project]
name = "platform_core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thanh LE", email = "thanhlq@msn.com" }
]
requires-python = ">=3.14"
dependencies = [
    "msgspec==0.21.1",
    "sqlalchemy==2.0.50",
    "advanced-alchemy[cryptography]==1.11.0",
    "typing_extensions==4.15.0",
    "sniffio==1.3.1",
    "multidict==6.7.1",
    "attrs==26.1.0",
    "pydantic==2.13.4",
    "exceptiongroup==1.3.1",
    "rich==15.0.0",
    "dotenv==0.9.9",
    "importlib-metadata==9.0.0",
    "python-socketio==5.16.2",
    # To check if needed
    # "trio==0.33.0",
    "cachetools==7.1.4",
    "jinja2>=3.1.6",
    "fast-query-parsers>=1.0.3",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
asyncio_mode = "auto"
