[project]
name = "platform_db_sa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thanh LE", email = "thanh@msn.com" }
]
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy==2.0.48",
    "advanced_alchemy==1.9.3"
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
